--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ DerivedData
 Pods
 Tests/Pods
 Tests/Podfile.lock
-Tests/YLMomentTests.xcworkspace
+Tests/VLCRemoteKitTests.xcworkspace
 
 #CocoaDocs
 documentation
