[ADD] Test Files

--- a/Tests/Podfile
+++ b/Tests/Podfile
@@ -2,6 +2,7 @@ xcodeproj 'VLCRemoteKitTests'
 inhibit_all_warnings!
 
 def import_pods
+  pod 'Expecta', '~> 0.2'
   pod 'OCMock', '~> 2.0'
   pod 'VLCRemoteKit', :path => '../'
 end
