--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ branches:
   only:
     - master
 before_install:
+    - brew update
+    - if brew outdated | grep -qx xctool; then brew upgrade xctool; fi
     - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
     - cd Tests && pod install && cd $TRAVIS_BUILD_DIR
 before_script:
