--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: objective-c
+osx_image: xcode6.4
 branches:
   only:
     - master
 before_install:
-    - brew update
-    - if brew outdated | grep -qx xctool; then brew upgrade xctool; fi
-    - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
-    - cd Tests && pod install && cd $TRAVIS_BUILD_DIR
-before_script:
-    - sudo easy_install cpp-coveralls
-script: rake test:ios
-after_success:
-    - ./coveralls.rb --extension m --exclude-folder Tests
+  - gem install xcpretty
+script:
+- set -o pipefail
+- xcodebuild -project Example/VLCRemoteKitExample.xcodeproj -scheme VLCRemoteKitTests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO test | xcpretty -c
